welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:1: error: not found: value max
def arrayFront9(nums:Array[Int]): Boolean = {var a = max(4,nums.length)
                                                     ^arrayFront9:2: error: type mismatch;
 found   : Unit
 required: Boolean
                                             for (k<-1 to a){if (nums(k)==9){return true}}} 
                                                   ^